wasm/fastq_mutate_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_3rk_f1nj/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/1b7c9904812e48b770b8d70c10651306a642ed2f.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/1b7c9904812e48b770b8d70c10651306a642ed2f.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/1bccf0e7741414790aa3c5d38701ddcc20ea7302.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/1bccf0e7741414790aa3c5d38701ddcc20ea7302.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/d9f8429e247e6b62d3614559588647e52ad8bfe5.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/d9f8429e247e6b62d3614559588647e52ad8bfe5.json" for subsequent builds)
cache:INFO:  - ok
